--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 
 body {
     font-family: "Inter", sans-serif;
+    background: #f1f1f1;
 }
 
 a {
@@ -29,8 +30,8 @@ li {
 
 :root {
     --text-white: #ffffff;
-    --theme-color: #600EE4;
-    --secondary-theme-color: #684ac4;
+    --theme-color: #84abdb;
+    --secondary-theme-color: #84abdb;
 }
 
 
@@ -47,7 +48,13 @@ li {
     padding: 14px 35px;
     font-weight: 600;
    border-radius: 15px;
+       box-shadow: inset -2px -2px 2px #070d1d4d;
 
+}
+
+.theme-color-btn:hover{
+    background: #e0b859 !important;
+    color: #000 !important;
 }
 
 
@@ -154,7 +161,10 @@ nav{
     font-weight: 600;
 border-radius: 15px;
 }
-
+.white-color-btn:hover{
+    background: var(--theme-color) !important;
+    color: #000 !important;  
+}
 .m-nav-btn-hide{
     position: relative;
     & input:focus{
@@ -174,10 +184,22 @@ border-radius: 15px;
 }
 header,
 .section-hero{
-    background-color: rgb(241, 241, 241);
+    background-color: #f1f1f1;
+}
+.section-hero{
+    background:#f1f1f1 !important;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: right top;
 }
 
-
+.sm-pic{
+    right: 0;
+    top:200px;
+    position: absolute;
+    width: 37%;
+    opacity: 0.2;
+}
 
 
 
@@ -217,16 +239,6 @@ header,
 }
 
 
-.ytwo {
-    width: 150px;
-    aspect-ratio: 1;
-    position: absolute;
-    top: -45%;
-    right: 20%;
-    width: 60px;
-    animation: ytwo 0.5s infinite;
-    -webkit-animation: ytwo 0.5s infinite;
-}
 
 @keyframes ytwo {
 
@@ -281,7 +293,6 @@ header,
      position: absolute;
      bottom: 0;
      width: 100px;
-     bottom: -70%;
      right: 0%;
      animation: yfour 0.5s infinite;
  
@@ -310,3 +321,435 @@ header,
 /* hero section end */
 
 /*:::::::::::::Home page end::::::::::::*/
+
+nav li a{
+   font-family: "Plus Jakarta Sans", sans-serif;
+   color: #010101 !important; 
+}
+nav li a:hover{
+    color: #84abdb !important;
+}
+.signup-nows{
+    padding-left: 20%;
+}
+#navbar-default{
+    width: 85%;
+    width: 85%;
+    justify-content: center;
+    display: flex;
+}
+.loggos{
+    width: 15%;
+}
+.signup-nows li:last-child{
+    margin-left: auto !important;
+}
+.signup-nows li a{
+ padding: 12px 11px;
+}
+.signup-nows li:last-child a{
+    background: #84abdb;
+    font-weight: 500;
+    font-size: 16px;
+    padding: 10px 30px;
+    border-radius: 50px;
+    transition: all 0.5s;
+    position: relative;
+    right: -140px;
+    display: table;
+    color: var(--text-white) !important;
+
+}
+.signup-nows li:last-child a:hover{
+    background-color:#e0b859 !important;
+    color: #000 !important;
+}
+.section-hero{
+    background: #f7fbff url(../public/bg-back01.jpg) no-repeat;
+    background-size: cover;
+    width: 100%;
+    
+}
+.banner-tms01{
+    width: 48%;
+    padding-top: 70px;
+}
+.border-round-bar{
+    border-radius: 50px;
+    overflow: hidden;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    padding: 14px;
+}
+.off-cnvas01{
+    right: 0;
+
+}
+.offcanv{
+    background: #300513;
+}
+.clones-btn{
+    
+    padding: 0px 12px 9px 12px;
+    line-height: normal;
+    /* padding-top: 7px; */
+    font-size: 30px;
+    color: #fff;
+    padding: 0;
+
+}
+.offcanv ul li a{
+  color: var(--text-white) !important;
+  text-transform: uppercase;
+  background: none !important;
+  border-bottom: solid 1px #e6a93742 !important;
+  padding: 14px 20px;
+  font-size: 15px;
+}
+
+
+.container-hero {
+    position: relative;
+    height: 72vh;
+}
+
+.hero-main-text {
+    font-size: 50px;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-weight: 300;
+    letter-spacing: -0.03em;
+    line-height: 61px;
+    width: 100%;
+    margin-bottom: 20px;
+}
+.hero-main-text span{
+    font-size: 50px;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-weight: 700; 
+    position: relative;
+    text-transform: capitalize;
+    color: var(--secondary-theme-color);
+}
+
+.hero-main-text strong{
+    font-size: 50px;
+    font-family: "Plus Jakarta Sans", sans-serif;
+    font-weight: 700; 
+    position: relative;
+    text-transform: capitalize;
+    color: #010101;
+    
+}
+.hero-main-text span svg{
+    position: absolute;
+    right: -9px;
+    bottom: -5px;
+}
+
+
+.white-color-btn {
+    margin-left: 20px;
+    color: #010101;
+    background-color: var(--text-white);
+}
+
+.banner-tms01 .sub-text{
+    width: 70%;
+}
+
+@media (min-width: 1280px) {
+    .container {
+        max-width: 1200px;
+    }
+}
+
+
+.custom-cursor {
+  position: fixed;
+  width: 35px;
+  height: 35px;
+  border: solid 2px rgba(255, 60, 34, 0.6);
+  border-radius: 50%;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: transform 0.05s ease;
+  z-index: 9999;
+}
+.custom-cursor::before{
+    position: absolute;
+    right: 0;
+    left: 0;
+    top:12px;
+    width: 8px;
+    height: 8px;
+    margin: auto;
+    border-radius: 50px;
+    overflow: hidden;
+    background: rgba(255, 60, 34, 0.6);
+    content: "";
+}
+
+
+
+.ione-face {
+    animation: faceleftright 2s alternate infinite;
+    -webkit-animation: faceleftright 2s alternate infinite;
+    right: 100px;
+    position: absolute;
+    bottom: 80px;
+    width: 200px;
+}
+
+@keyframes faceleftright {
+    0% {
+        transform: translate(0);
+    }
+
+    100% {
+        transform: translate(-40px);
+        -webkit-transform: translate(-40px);
+        -moz-transform: translate(-40px);
+        -ms-transform: translate(-40px);
+        -o-transform: translate(-40px);
+    }
+}
+
+.ithree {
+    position: absolute;
+    top: 60px;
+    right: 110px;
+    width: 280px;
+    animation: ithree 2s alternate infinite;
+    -webkit-animation: ithree 2s alternate infinite;
+}
+
+@keyframes ithree {
+    0% {
+        transform: translate(0);
+        -webkit-transform: translate(0);
+        -moz-transform: translate(0);
+        -ms-transform: translate(0);
+        -o-transform: translate(0);
+    }
+
+    50% {
+        transform: translateY(-10px);
+        -webkit-transform: translateY(-10px);
+        -moz-transform: translateY(-10px);
+        -ms-transform: translateY(-10px);
+        -o-transform: translateY(-10px);
+    }
+
+    100% {
+        transform: translateX(-50px);
+        -webkit-transform: translateX(-50px);
+        -moz-transform: translateX(-50px);
+        -ms-transform: translateX(-50px);
+        -o-transform: translateX(-50px);
+    }
+}
+
+.ifour {
+    position: absolute;
+    top: 25px;
+    right: 0;
+    width: 140px;
+    animation: gelatine 0.5s infinite;
+    -webkit-animation: gelatine 0.5s infinite;
+}
+
+@keyframes ifour {
+    0% {
+        transform: translate(0);
+        -webkit-transform: translate(0);
+        -moz-transform: translate(0);
+        -ms-transform: translate(0);
+        -o-transform: translate(0);
+    }
+
+
+    100% {
+        transform: translate(-10px, 50px);
+        -webkit-transform: translate(-10px, 50px);
+        -moz-transform: translate(-10px, 50px);
+        -ms-transform: translate(-10px, 50px);
+        -o-transform: translate(-10px, 50px);
+    }
+}
+
+
+@keyframes gelatine {
+
+    from,
+    to {
+        transform: scale(1, 1);
+    }
+
+    25% {
+        transform: scale(0.9, 1.1);
+    }
+
+    50% {
+        transform: scale(1.1, 0.9);
+    }
+
+    75% {
+        transform: scale(0.95, 1.05);
+    }
+}
+
+.itwo {
+    position: absolute;
+    top: -50%;
+    width: 100px;
+    aspect-ratio: 1;
+    animation: roll-in 2s ease infinite;
+}
+
+
+@keyframes roll-in {
+    0% {
+        opacity: 0;
+        transform: translateX(-100%) rotate(-120deg);
+        -webkit-transform: translateX(-100%) rotate(-120deg);
+        -moz-transform: translateX(-100%) rotate(-120deg);
+        -ms-transform: translateX(-100%) rotate(-120deg);
+        -o-transform: translateX(-100%) rotate(-120deg);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0px) rotate(0deg);
+    }
+}
+
+.isix {
+    position: absolute;
+    top: 200px;
+    right: 0%;
+    width: 80px;
+    aspect-ratio: 1;
+    animation: pulse 1s infinite ease-in-out alternate;
+}
+
+
+@keyframes pulse {
+    from {
+        transform: scale(0.8);
+    }
+
+    to {
+        transform: scale(1.2);
+    }
+}
+
+
+.md-logo01 {
+    width: 142px;
+}
+.brn-btn{
+    height: 60px;
+    line-height: 61px;
+    padding: 0 35px;
+    font-weight: 700;
+    font-size: 16px;
+    text-align: center;
+    border-radius: 50px;
+    font-family: "Urbanist", sans-serif;
+}
+.yone {
+    position: absolute;
+    top: 60px;
+    right: 110px;
+    width: 200px;
+    animation: 2s ease 0s infinite alternate none running ithree;
+}
+.ytwo {
+    right: 250px;
+    position: absolute;
+    bottom: 0px;
+    width: 150px;
+    animation: 2s ease 0s infinite alternate none running faceleftright;
+}
+@media (max-width: 1168px) {
+    .hero-main-text,
+    .hero-main-text span,
+    .hero-main-text strong{
+        font-size: 30px;
+        line-height: 42px;
+    }
+    .hero-main-text{
+        width: 100%;
+    }
+    .hero-main-text span svg{
+        width: 100%;
+        right: 0;
+    }
+}
+
+@media(max-width:910px){
+    #navbar-default{
+        display: none;
+    }
+    .banner-tms01{
+       width: 100%;
+       padding-top: 10px;
+       padding-left: 20px;
+    }
+    .ithree{
+        display: none;
+    }
+    .ione-face{
+        display: none;
+    }
+    .isix,
+    .ifour{
+        width: 50px;
+        position: relative;
+    }
+    .isix{
+        top: 0;
+        right: 0;
+        left: 50px;
+    }
+    .moible-full{
+        max-width: 100%;
+        width: 100%;
+        justify-content: space-between;
+    }
+    .loggos {
+         width: 34%;
+    }
+    .ifour {
+        position: relative;
+        bottom: -5px;
+        right: 0;
+        width: 140px;
+    }
+    .isix{
+       position: relative;
+        bottom: -5px;
+        left: 0;
+        width: 140px; 
+        margin-left: auto;
+        display: none;
+    }
+}
+@media(max-width:668px){
+     .hero-main-text,
+    .hero-main-text span,
+    .hero-main-text strong{
+        font-size: 40px;
+        line-height: 53px;
+    }
+    .hero-main-text {
+        width: 90%;
+    }
+    .loggos {
+        width: 21%;
+    }
+}
+@media (max-width: 540px) {
+    .loggos {
+        width: 41%;
+    }
+}
