--- a/src/index.css
+++ b/src/index.css
@@ -702,6 +702,9 @@ nav li a:hover{
         font-size: 14px;
         padding: 12px 4px;
     }
+    main{
+        overflow: hidden;
+    }
 }
 @media(max-width:910px){
     #navbar-default{
